--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,16 +1,218 @@
 body {
   margin: 0;
 }
+a {
+  text-decoration: none;
+  color: black;
+}
+
 header img {
   padding: 30px 28% 12px;
   width: 44%;
   height: 28px;
 }
+
 .localisation {
+  height: 50px;
   display: flex;
+  flex-direction: row;
   justify-content: center;
+  align-items: center;
   font-size: 1em;
   font-weight: bold;
   background-color: #eaeaea;
   border-top: 2px;
+}
+.localisation p {
+  font-family: roboto;
+  margin: 0;
+  padding-left: 18px;
+}
+
+.home {
+  display: flex;
+  flex-direction: column;
+  height: 287px;
+  background: #f6f6f6;
+}
+.home .title-part-1 {
+  display: flex;
+  justify-content: center;
+  font-size: 1.36rem;
+  font-weight: bold;
+  font-family: roboto;
+  margin: 0;
+  padding-top: 43px;
+}
+.home .title-part-2 {
+  display: flex;
+  justify-content: center;
+  font-size: 1.36rem;
+  font-weight: bold;
+  font-family: roboto;
+  margin: 0;
+  padding-bottom: 22px;
+}
+.home p {
+  display: flex;
+  justify-content: center;
+  font-family: roboto;
+  font-size: 1.1rem;
+  margin: 0;
+}
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 34px 20%;
+  width: 60%;
+  height: 50px;
+  border-radius: 50px;
+  background: linear-gradient(#f174da, #9d59dc);
+}
+.btn p {
+  font-size: 1rem;
+  font-family: roboto;
+  color: white;
+}
+
+.functioning-filter {
+  height: 441px;
+  display: flex;
+  flex-direction: column;
+  padding: 0 20px;
+}
+.functioning-filter h2 {
+  font-family: roboto;
+  padding: 52px 0 32px 0;
+  margin: 0;
+}
+.functioning-filter ol {
+  list-style-type: none;
+  padding:13px;
+  margin:0;
+}
+li::before {
+  width: 25px;
+  height: 25px;
+  border-radius: 25px;
+  content: "1"; 
+  color:white;
+  background:#9356DC;
+  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left:-0.8em;
+}
+.functioning-filter li {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background: #f6f6f6;
+  height: 75px;
+  border-radius: 20px;
+  margin-bottom: 25px;
+}
+.functioning-filter li:hover {
+  background: #f5edff;
+}
+.functioning-filter i {
+  padding: 0 27px 0 22px;
+  color:#7e7e7e;
+}
+.functioning-filter i:hover {
+  color:#9356DC;
+}
+.functioning-filter--icon {
+  font-size:1.3em;
+}
+.functioning-filter p {
+  font-family:roboto;
+  font-weight: bold;
+}
+
+section {
+  height: 1227px;
+  padding: 0 20px;
+  background: #f6f6f6;
+}
+section h2 {
+  font-family: roboto;
+  margin: 0;
+  padding: 59px 0 27px 0;
+}
+.restaurant-prev {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 250px;
+  border-radius: 20px;
+  margin-bottom: 13px;
+  box-shadow: 1px 1px 8px rgb(209, 208, 208);
+}
+.restaurant-prev img {
+  width: 100%;
+  height: 174px;
+  border-radius: 20px 20px 0px 0px;
+  object-fit: cover;
+}
+.restaurant-prev__description {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.restaurant-prev__description h3 {
+  font-family: roboto;
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 20px 0 6px 15px;
+  margin: 0;
+}
+.restaurant-prev__description p {
+  font-family: roboto;
+  font-size: 1rem;
+  padding-left: 15px;
+  margin: 0;
+}
+.heart-icon {
+  padding: 22px 24px 0 0;
+  font-size: 1.7rem;
+}
+.restaurant i {
+  display: flex;
+  align-items: center;
+}
+.restaurant i:hover {
+  background: linear-gradient(#9d59dc,#f174da, );
+}
+footer {
+  height: 197px;
+  background: #353535;
+  padding-left: 20px;
+  display: flex;
+  flex-direction: column;
+}
+footer h2 {
+  font-size: 1rem;
+  font-family: shrikhand;
+  color: white;
+  margin: 0;
+  padding: 26px 0 22px 0;
+}
+.footer__flex {
+  display: flex;
+  flex-direction: row;
+}
+footer i {
+  font-size: 1rem;
+  color: white;
+  padding-right: 9px;
+}
+footer p {
+  font-family: roboto;
+  font-size: 1rem;
+  color: white;
+  margin: 0;
+  padding-bottom: 9px;
 }
