--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,7 +68,7 @@ header img {
   width: 60%;
   height: 50px;
   border-radius: 50px;
-  background: linear-gradient(#f174da, #9d59dc);
+  background: linear-gradient(#FF79DA, #9356DC);
 }
 .btn p {
   font-size: 1rem;
@@ -92,7 +92,7 @@ header img {
   padding:13px;
   margin:0;
 }
-li::before {
+ol li::before {
   width: 25px;
   height: 25px;
   border-radius: 25px;
@@ -184,7 +184,7 @@ section h2 {
   align-items: center;
 }
 .restaurant i:hover {
-  background: linear-gradient(#9d59dc,#f174da, );
+  background: linear-gradient(#9356DC,#FF79DA);
 }
 footer {
   height: 197px;
@@ -225,10 +225,93 @@ footer p {
 }
 .header-menu a{
   font-size: 1.5em;
-  padding: 30px 17% 12px 20px;
-  
+  padding: 30px 17% 12px 20px; 
 }
 .header-menu img{
   justify-content: center;
   padding:30px 28% 12px 0; 
+}
+
+.menu {
+  height: 1416px;
+  background: #f6f6f6;
+}
+.menu img {
+  width: 100%;
+  height: 220px;
+  object-fit: cover;
+}
+.menu__description {
+  display: flex;
+  justify-content: space-between;
+  padding-top:33px;
+}
+.menu__description h1 {
+  font-size: 1.5rem;
+  font-family: shrikhand;
+  padding:0 0 35px 19px;
+  margin:0;
+}
+.heart--size {
+  height: 50%;
+  padding: 0 37px 0px 0;
+  font-size: 1.7rem;
+}
+.menu i{
+width: 100%;
+height: 100%;
+}
+.menu :nth-child(0n+3){
+  padding-top:0;
+
+}
+
+.menu-list {
+  padding-top:31px;
+}
+.menu-list h2 {
+  width: 13%;
+  font-family: roboto;
+  font-size: 1rem;
+  font-weight: normal;
+  padding-bottom:8px;
+  margin:0;
+  margin-left:20px;
+  border-bottom: 2px solid #99E2D0;
+}
+.menu-list ul {
+  list-style-type: none;
+  padding:14px 14px 16px;
+  margin:0;
+}
+.menu-list ul :nth-child(0n+3){
+  margin-bottom: 0;
+}
+.menu-list ul li {
+  display: flex;
+  flex-direction: column;
+  height: 68px;
+  border-radius: 15px;
+  background:white;
+  margin-bottom: 15px;
+}
+.menu-list ul li h3{
+  font-family: roboto;
+  font-size:1em;
+  font-weight: bold;
+  padding: 14px 0 0 11px;
+  margin:0;
+ }
+.menu-list__description {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 8px 23px 13px 10px;
+}
+.menu-list__description p{
+  margin:0;
+  border:none;
+}
+.menu :nth-child(0+5){
+
 }
