--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,21 +57,25 @@ header img {
   display: flex;
   justify-content: center;
   font-family: roboto;
-  font-size: 1.1rem;
+  font-size: 1rem;
   margin: 0;
+}
+.home-btn{
+  display:flex;
+  justify-content: center;
+  padding-top:34px;
 }
 .btn {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 34px 20%;
   width: 60%;
   height: 50px;
   border-radius: 50px;
   background: linear-gradient(#FF79DA, #9356DC);
 }
 .btn p {
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-family: roboto;
   color: white;
 }
@@ -118,17 +122,18 @@ ol li::before {
   background: #f5edff;
 }
 .functioning-filter i {
-  padding: 0 27px 0 22px;
+  padding: 0 27px 0 20px;
   color:#7e7e7e;
 }
 .functioning-filter i:hover {
   color:#9356DC;
 }
 .functioning-filter--icon {
-  font-size:1.3em;
+  font-size:1.1rem;
 }
 .functioning-filter p {
   font-family:roboto;
+  font-size:0.9rem;
   font-weight: bold;
 }
 
@@ -231,9 +236,7 @@ footer p {
   justify-content: center;
   padding:30px 28% 12px 0; 
 }
-
 .menu {
-  height: 1416px;
   background: #f6f6f6;
 }
 .menu img {
@@ -261,14 +264,6 @@ footer p {
 width: 100%;
 height: 100%;
 }
-.menu :nth-child(0n+3){
-  padding-top:0;
-
-}
-
-.menu-list {
-  padding-top:31px;
-}
 .menu-list h2 {
   width: 13%;
   font-family: roboto;
@@ -281,11 +276,8 @@ height: 100%;
 }
 .menu-list ul {
   list-style-type: none;
-  padding:14px 14px 16px;
+  padding:14px 14px 25px;
   margin:0;
-}
-.menu-list ul :nth-child(0n+3){
-  margin-bottom: 0;
 }
 .menu-list ul li {
   display: flex;
@@ -309,9 +301,12 @@ height: 100%;
   padding: 8px 23px 13px 10px;
 }
 .menu-list__description p{
+  font-size:0.9rem;
   margin:0;
   border:none;
 }
-.menu :nth-child(0+5){
-
+.page-btn {
+  display:flex;
+  justify-content: center;
+  padding:10px 0 60px;
 }
