--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,10 +10,11 @@ a {
 header img {
   padding: 30px 28% 12px;
   width: 44%;
-  height: 28px;
+  height: 30px;
 }
 
 .localisation {
+  width: 100%;
   height: 50px;
   display: flex;
   flex-direction: row;
@@ -22,7 +23,7 @@ header img {
   font-size: 1em;
   font-weight: bold;
   background-color: #eaeaea;
-  border-top: 2px;
+  box-shadow: 1px 1px 8px rgb(81.2, 81.2, 81.2);
 }
 .localisation p {
   font-family: roboto;
@@ -33,7 +34,6 @@ header img {
 .home {
   display: flex;
   flex-direction: column;
-  height: 287px;
   background: #f6f6f6;
 }
 .home .title-part-1 {
@@ -61,10 +61,11 @@ header img {
   font-size: 1rem;
   margin: 0;
 }
-.home-btn{
-  display:flex;
+.home-btn {
+  display: flex;
   justify-content: center;
-  padding-top:34px;
+  padding-top: 34px;
+  padding-bottom: 57px;
 }
 .btn {
   display: flex;
@@ -73,7 +74,7 @@ header img {
   width: 60%;
   height: 50px;
   border-radius: 50px;
-  background: linear-gradient(#FF79DA, #9356DC);
+  background: linear-gradient(#ff79da, #9356dc);
 }
 .btn p {
   font-size: 0.9rem;
@@ -82,7 +83,6 @@ header img {
 }
 
 .functioning-filter {
-  height: 441px;
   display: flex;
   flex-direction: column;
   padding: 0 20px;
@@ -94,21 +94,21 @@ header img {
 }
 .functioning-filter ol {
   list-style-type: none;
-  padding:13px;
-  margin:0;
+  padding: 13px;
+  margin: 0;
 }
 ol li::before {
   width: 25px;
   height: 25px;
   border-radius: 25px;
-  content: "1"; 
-  color:white;
-  background:#9356DC;
+  content: "1";
+  color: white;
+  background: #9356dc;
   display: inline-block;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left:-0.8em;
+  margin-left: -0.8em;
 }
 .functioning-filter li {
   display: flex;
@@ -124,22 +124,21 @@ ol li::before {
 }
 .functioning-filter i {
   padding: 0 27px 0 20px;
-  color:#7e7e7e;
+  color: #7e7e7e;
 }
 .functioning-filter i:hover {
-  color:#9356DC;
+  color: #9356dc;
 }
 .functioning-filter--icon {
-  font-size:1.1rem;
+  font-size: 1.1rem;
 }
 .functioning-filter p {
-  font-family:roboto;
-  font-size:0.9rem;
+  font-family: roboto;
+  font-size: 0.9rem;
   font-weight: bold;
 }
 
 section {
-  height: 1227px;
   padding: 0 20px;
   background: #f6f6f6;
 }
@@ -190,7 +189,7 @@ section h2 {
   align-items: center;
 }
 .restaurant i:hover {
-  background: linear-gradient(#9356DC,#FF79DA);
+  background: linear-gradient(#9356dc, #ff79da);
 }
 footer {
   height: 197px;
@@ -229,17 +228,17 @@ footer p {
   flex-direction: row;
   align-items: center;
 }
-.header-menu a{
+.header-menu a {
   font-size: 1.5em;
-  padding: 30px 17% 12px 20px; 
+  padding: 30px 17% 12px 20px;
 }
-.header-menu img{
+.header-menu img {
   justify-content: center;
-  padding:30px 25% 12px 0; 
+  padding: 30px 25% 12px 0;
 }
 .menu--background {
-  position:relative;
-  margin-top:-47px;
+  position: relative;
+  margin-top: -47px;
   border-radius: 50px 42px 0 0;
   background: #f6f6f6;
 }
@@ -251,66 +250,150 @@ footer p {
 .menu__description {
   display: flex;
   justify-content: space-between;
-  padding-top:33px;
+  padding-top: 33px;
 }
 .menu__description h1 {
   font-size: 1.5rem;
   font-family: shrikhand;
-  padding:0 0 35px 19px;
-  margin:0;
+  padding: 0 0 35px 19px;
+  margin: 0;
 }
 .heart--size {
   height: 50%;
   padding: 0 37px 0px 0;
   font-size: 1.7rem;
 }
-.menu i{
-width: 100%;
-height: 100%;
+.menu i {
+  width: 100%;
+  height: 100%;
 }
 .menu-list h2 {
   width: 13%;
   font-family: roboto;
   font-size: 1rem;
   font-weight: normal;
-  padding-bottom:8px;
-  margin:0;
-  margin-left:20px;
-  border-bottom: 2px solid #99E2D0;
+  padding-bottom: 8px;
+  margin: 0;
+  margin-left: 20px;
+  border-bottom: 2px solid #99e2d0;
 }
 .menu-list ul {
   list-style-type: none;
-  padding:14px 14px 25px;
-  margin:0;
+  padding: 14px 14px 25px;
+  margin: 0;
 }
 .menu-list ul li {
   display: flex;
   flex-direction: column;
   height: 68px;
   border-radius: 15px;
-  background:white;
+  background: white;
   margin-bottom: 15px;
 }
-.menu-list ul li h3{
+.menu-list ul li h3 {
   font-family: roboto;
-  font-size:1em;
+  font-size: 1em;
   font-weight: bold;
   padding: 14px 0 0 11px;
-  margin:0;
- }
+  margin: 0;
+}
 .menu-list__description {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   padding: 8px 23px 13px 10px;
 }
-.menu-list__description p{
-  font-size:0.9rem;
-  margin:0;
-  border:none;
+.menu-list__description p {
+  font-size: 0.9rem;
+  margin: 0;
+  border: none;
 }
 .page-btn {
-  display:flex;
+  display: flex;
   justify-content: center;
-  padding:10px 0 60px;
+  padding: 10px 0 60px;
+}
+
+@media only screen and (min-width: 768px) {
+  header img {
+    padding: 30px 0 12px 50px;
+    width: 300px;
+  }
+
+  .flex-home-desktop-tablet {
+    display: flex;
+    flex-direction: column;
+    padding: 0 40px;
+    box-shadow: 1px 1px 8px (81.2, 81.2, 81.2);
+  }
+  .localisation {
+    border-radius: 25px 25px 0 0;
+    box-shadow: none;
+  }
+  .home {
+    border-radius: 0 0 25px 25px;
+  }
+  .btn {
+    width: 220px;
+  }
+
+  .functioning-filter {
+    padding: 0 40px;
+  }
+  .functioning-filter h2 {
+    padding: 0;
+    padding-top: 20px;
+  }
+  .functioning-filter ol {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding: 0;
+    padding-top: 20px;
+  }
+  .functioning-filter li {
+    width: 320px;
+    margin-right: 40px;
+    margin-bottom: 0;
+  }
+
+  section {
+    padding: 20px 40px;
+    background: white;
+  }
+  section h2 {
+    padding: 0;
+    padding-bottom: 20px;
+  }
+  article {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border-radius: 25px;
+    background: #f6f6f6;
+  }
+  .restaurant-prev {
+    width: 40%;
+    margin: 5%;
+  }
+
+  footer {
+    margin: 0 40px 40px;
+    background:#353535;
+    border-radius: 25px;
+  }
+  .header-menu {
+    margin:0 40px;
+  }
+  .menu {
+    margin:0 40px 20px;
+  }
+  .menu img {
+    border-radius: 25px 25px 0 0;
+  }
+  .menu--background {
+    border-radius: 0 0 25px 25px;
+  }
+
+
 }
