--- a/public/css/style.css
+++ b/public/css/style.css
@@ -99,6 +99,8 @@ header img {
   margin: 0;
 }
 ol li::before {
+  position: relative;
+  min-width: 25px;
   width: 25px;
   height: 25px;
   border-radius: 25px;
@@ -109,7 +111,7 @@ ol li::before {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: -0.8em;
+  left: -11px;
 }
 .functioning-filter li {
   display: flex;
