--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,7 +30,6 @@ header img {
   margin: 0;
   padding-left: 18px;
 }
-
 .home {
   display: flex;
   flex-direction: column;
@@ -161,12 +160,12 @@ section h2 {
   margin-bottom: 13px;
   box-shadow: 1px 1px 8px rgb(209, 208, 208);
 }
-.restaurant-prev span{
+.restaurant-prev span {
   position: absolute;
-  top:13px;
+  top: 13px;
   right: 13px;
-  background: #99E2D0;
-  color:#008766;
+  background: #99e2d0;
+  color: #008766;
   padding: 5px 10px;
   border-radius: 2.5px;
 }
@@ -297,30 +296,102 @@ footer p {
   margin: 0;
 }
 .menu-list ul li {
+  position: relative;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
   height: 68px;
   border-radius: 15px;
   background: white;
   margin-bottom: 15px;
+  overflow: hidden;
 }
-.menu-list ul li h3 {
+li a {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+.menu-list__description {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 8px 10px 13px 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.menu-list__description h3 {
+  width: 100%;
   font-family: roboto;
   font-size: 1em;
   font-weight: bold;
-  padding: 14px 0 0 11px;
   margin: 0;
 }
-.menu-list__description {
+.description {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 8px 23px 13px 10px;
 }
 .menu-list__description p {
+  width: 50%;
   font-size: 0.9rem;
   margin: 0;
   border: none;
+}
+.price {
+  display: flex;
+  justify-content: flex-end;
+}
+.check-box {
+  background-color: #99e2d0;
+  height: 68px;
+  border-radius: 0 15px 15px 0;
+  right: 0;
+  top: 0;
+  opacity: 0;
+}
+.check-box:hover {
+  width: 20%;
+  opacity: 1;
+  animation: slideleft 0.4s ease-in-out forwards;
+}
+
+@keyframes slideleft {
+  from {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.check-box i {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  right: 0;
+  top: 0;
+  opacity: 0;
+}
+.check-box i:hover {
+  font-size: 20px;
+  opacity: 1;
+  animation: rotate 0.5s ease-in-out;
+}
+@keyframes rotate {
+  from {
+    transform: rotate(-270deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
 }
 .page-btn {
   display: flex;
@@ -346,9 +417,6 @@ footer p {
   }
   .home {
     border-radius: 0 0 25px 25px;
-  }
-  .btn {
-    width: 220px;
   }
 
   .functioning-filter {
@@ -385,7 +453,7 @@ footer p {
     flex-wrap: wrap;
     border-radius: 25px;
     background: #f6f6f6;
-    padding-top:40px;
+    padding-top: 40px;
   }
   .flex-card-tablet-and-desktop {
     display: flex;
@@ -396,20 +464,25 @@ footer p {
     width: 100%;
     padding-right: 40px;
   }
-    .restaurant-prev {
-      margin:0;
+  .restaurant-prev {
+    margin: 0;
   }
 
   footer {
     margin: 0 40px 40px;
-    background:#353535;
+    background: #353535;
     border-radius: 25px;
   }
+  /*Page menu*/
+
   .header-menu {
-    margin:0 40px;
+    margin: 0 40px;
+  }
+  .header-menu a {
+    padding: 30px 40px 12px 20px;
   }
   .menu {
-    margin:0 40px 20px;
+    margin: 0 40px 20px;
   }
   .menu img {
     border-radius: 25px 25px 0 0;
@@ -417,6 +490,7 @@ footer p {
   .menu--background {
     border-radius: 0 0 25px 25px;
   }
-
-
+  .check-box:hover {
+    width: 10%;
+  }
 }
