--- a/public/css/style.css
+++ b/public/css/style.css
@@ -342,17 +342,22 @@ footer p {
   justify-content: flex-end;
 }
 .check-box {
+  display: none;
   background-color: #99e2d0;
   height: 68px;
   border-radius: 0 15px 15px 0;
   right: 0;
   top: 0;
-  opacity: 0;
+  animation: slideleft 0.3s ease-in-out forwards;
 }
-.check-box:hover {
-  width: 20%;
-  opacity: 1;
-  animation: slideleft 0.4s ease-in-out forwards;
+
+.parent:hover > .check-box {
+  display: block;
+  width: 10%;
+}
+.parent:hover > .check-box i {
+  font-size: 20px;
+  display: flex;
 }
 
 @keyframes slideleft {
@@ -367,19 +372,15 @@ footer p {
 }
 
 .check-box i {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   color: white;
   right: 0;
   top: 0;
-  opacity: 0;
-}
-.check-box i:hover {
-  font-size: 20px;
-  opacity: 1;
   animation: rotate 0.5s ease-in-out;
 }
+
 @keyframes rotate {
   from {
     transform: rotate(-270deg);
@@ -388,6 +389,7 @@ footer p {
     transform: rotate(0deg);
   }
 }
+
 .page-btn {
   display: flex;
   justify-content: center;
