--- a/public/css/style.css
+++ b/public/css/style.css
@@ -316,7 +316,6 @@ footer p {
   padding: 8px 10px 13px 10px;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
 }
 .menu-list__description h3 {
   width: 100%;
@@ -351,15 +350,20 @@ footer p {
   animation: slideleft 0.3s ease-in-out forwards;
 }
 .menu-list__description + .check-box {
-  
 }
 .parent:hover > .check-box {
   display: block;
   width: 20%;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .parent:hover > .check-box i {
   font-size: 20px;
   display: flex;
+}
+.parent:hover > .menu-list__description p {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 @keyframes slideleft {
@@ -380,7 +384,7 @@ footer p {
   color: white;
   right: 0;
   top: 0;
-  animation: rotate 0.5s ease-in-out;
+  animation: rotate 1s ease-in-out;
 }
 
 @keyframes rotate {
@@ -489,7 +493,7 @@ footer p {
   .menu--background {
     border-radius: 0 0 25px 25px;
   }
-  .check-box:hover {
+  .parent:hover >.check-box {
     width: 10%;
   }
 }
