--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,13 +6,12 @@ a {
   text-decoration: none;
   color: black;
 }
-
 header img {
   padding: 30px 28% 12px;
   width: 44%;
   height: 30px;
+  box-shadow: 1px 1px 8px rgb(81.2, 81.2, 81.2);
 }
-
 .localisation {
   width: 100%;
   height: 50px;
@@ -23,12 +22,22 @@ header img {
   font-size: 1em;
   font-weight: bold;
   background-color: #eaeaea;
-  box-shadow: 1px 1px 8px rgb(81.2, 81.2, 81.2);
 }
-.localisation p {
-  font-family: roboto;
-  margin: 0;
-  padding-left: 18px;
+.fa-map-marker-alt {
+  padding-right: 20px;
+}
+.search {
+  width: 40%;
+  height: 80%;
+  font-size: 1.3rem;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  background: #eaeaea;
+  border: none;
+}
+::-webkit-input-placeholder {
+  color: black;
 }
 .home {
   display: flex;
@@ -134,7 +143,7 @@ ol li::before {
 .fa-mobile-alt {
   font-size: 1.3rem;
   padding-left: 20px;
-  padding-right:27px;
+  padding-right: 27px;
 }
 .fa-list-ul {
   font-size: 1.2rem;
@@ -145,7 +154,7 @@ ol li::before {
 .fa-store {
   font-size: 0.8rem;
   padding-left: 20px;
-  padding-right:23px;
+  padding-right: 23px;
 }
 .functioning-filter p {
   font-family: roboto;
@@ -277,7 +286,7 @@ footer p {
   font-size: 1rem;
   color: white;
   margin: 0;
-  padding:0 0 9px 9px;
+  padding: 0 0 9px 9px;
 }
 
 /*Pages menu */
@@ -466,8 +475,8 @@ footer p {
   header img {
     padding: 30px 0 12px 50px;
     width: 300px;
+    box-shadow: none;
   }
-
   .flex-home-desktop-tablet {
     display: flex;
     flex-direction: column;
@@ -477,6 +486,9 @@ footer p {
   .localisation {
     border-radius: 25px 25px 0 0;
     box-shadow: none;
+  }
+  .search {
+    width: 10%;
   }
   .home {
     border-radius: 0 0 25px 25px;
