--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,275 @@
+@charset "UTF-8";
+.loader {
+  /* création loader */
+  border: 10px solid #f3f3f3;
+  width: 200px;
+  height: 200px;
+  border-top: 10px solid #9356DC;
+  border-bottom: 10px solid #FF79DA;
+  border-right: 10px solid #99E2D0;
+  border-left: 10px solid #99E2D0;
+  border-radius: 50%;
+  -webkit-animation: spin 3s linear 5s backwards;
+  -o-animation: spin 3s linear 5s backwards;
+  animation: spin 3s linear 5s backwards;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+  background-color: white;
+  opacity: 0;
+  /* positionnement loader */
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+/* animation loader */
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+    opacity: 1;
+  }
+}
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    opacity: 1;
+  }
+}
+/*Pages menu */
+.header-menu {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.header-menu a {
+  font-size: 1.5em;
+  padding: 30px 17% 12px 20px;
+}
+.header-menu img {
+  justify-content: center;
+  padding: 30px 25% 12px 0;
+}
+
+.menu--background {
+  position: relative;
+  margin-top: -47px;
+  border-radius: 50px 42px 0 0;
+  background: #f6f6f6;
+}
+
+.menu img {
+  width: 100%;
+  height: 220px;
+  object-fit: cover;
+}
+
+.menu__description {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 33px;
+}
+
+.menu__description h1 {
+  font-size: 1.5rem;
+  font-family: shrikhand;
+  padding: 0 0 35px 19px;
+  margin: 0;
+}
+
+.heart--size {
+  height: 50%;
+  padding: 0 37px 0px 0;
+  font-size: 1.7rem;
+}
+
+.menu i {
+  width: 100%;
+  height: 100%;
+}
+
+.menu-list {
+  animation: slidedown 1s ease-in-out forwards;
+}
+
+@keyframes slidedown {
+  from {
+    transform: translateY(30px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+.menu-list h2 {
+  width: 13%;
+  font-family: roboto;
+  font-size: 1rem;
+  font-weight: normal;
+  padding-bottom: 8px;
+  margin: 0;
+  margin-left: 20px;
+  border-bottom: 2px solid #99e2d0;
+}
+
+.menu-list ul {
+  list-style-type: none;
+  padding: 14px 14px 25px;
+  margin: 0;
+}
+
+.menu-list ul li {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  height: 68px;
+  border-radius: 15px;
+  background: white;
+  margin-bottom: 15px;
+  overflow: hidden;
+  cursor: pointer;
+  box-shadow: 1px 1px 8px #d1d0d0;
+}
+
+.menu-list__description {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 8px 10px 13px 10px;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.menu-list__description h3 {
+  width: 100%;
+  font-family: roboto;
+  font-size: 1em;
+  font-weight: bold;
+  margin: 0;
+}
+
+.description {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.menu-list__description p {
+  width: 50%;
+  font-size: 0.9rem;
+  margin: 0;
+  border: none;
+}
+
+.price {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.check-box {
+  display: none;
+  background-color: #99e2d0;
+  height: 68px;
+  border-radius: 0 15px 15px 0;
+  right: 0;
+  top: 0;
+  animation: slideleft 0.8s ease-in-out forwards;
+}
+
+.parent:hover > .check-box {
+  display: block;
+  width: 20%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.parent:hover > .check-box i {
+  font-size: 20px;
+  display: flex;
+}
+
+.parent:hover > .menu-list__description p {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+@keyframes slideleft {
+  from {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+.check-box i {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 20px;
+  right: 0;
+  top: 0;
+  opacity: 1;
+  animation: rotate 800ms ease-in;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(-270deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+.page-btn {
+  display: flex;
+  justify-content: center;
+  padding: 10px 0 60px;
+}
+
+@media only screen and (min-width: 768px) {
+  /*Page menu*/
+  .header-menu {
+    margin: 0 40px;
+  }
+
+  .header-menu a {
+    padding: 30px 40px 12px 20px;
+  }
+
+  .menu {
+    margin: 0 40px 20px;
+  }
+
+  .menu img {
+    border-radius: 25px 25px 0 0;
+  }
+
+  .menu--background {
+    border-radius: 0 0 25px 25px;
+  }
+
+  .parent:hover > .check-box {
+    width: 7%;
+  }
+}
 body {
   width: 100%;
   margin: 0;
@@ -276,6 +548,7 @@ section h2 {
 .heart-icon:hover > .heart-full {
   display: block;
   background: linear-gradient(0, #9356dc, #ff79da);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -337,206 +610,6 @@ footer p {
 
 footer p a {
   color: white;
-}
-
-/*Pages menu */
-.header-menu {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.header-menu a {
-  font-size: 1.5em;
-  padding: 30px 17% 12px 20px;
-}
-
-.header-menu img {
-  justify-content: center;
-  padding: 30px 25% 12px 0;
-}
-
-.menu--background {
-  position: relative;
-  margin-top: -47px;
-  border-radius: 50px 42px 0 0;
-  background: #f6f6f6;
-}
-
-.menu img {
-  width: 100%;
-  height: 220px;
-  object-fit: cover;
-}
-
-.menu__description {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 33px;
-}
-
-.menu__description h1 {
-  font-size: 1.5rem;
-  font-family: shrikhand;
-  padding: 0 0 35px 19px;
-  margin: 0;
-}
-
-.heart--size {
-  height: 50%;
-  padding: 0 37px 0px 0;
-  font-size: 1.7rem;
-}
-
-.menu i {
-  width: 100%;
-  height: 100%;
-}
-
-.menu-list {
-  animation: slidedown 1s ease-in-out forwards;
-}
-
-@keyframes slidedown {
-  from {
-    transform: translateY(30px);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-.menu-list h2 {
-  width: 13%;
-  font-family: roboto;
-  font-size: 1rem;
-  font-weight: normal;
-  padding-bottom: 8px;
-  margin: 0;
-  margin-left: 20px;
-  border-bottom: 2px solid #99e2d0;
-}
-
-.menu-list ul {
-  list-style-type: none;
-  padding: 14px 14px 25px;
-  margin: 0;
-}
-
-.menu-list ul li {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  height: 68px;
-  border-radius: 15px;
-  background: white;
-  margin-bottom: 15px;
-  overflow: hidden;
-  cursor: pointer;
-  box-shadow: 1px 1px 8px #d1d0d0;
-}
-
-.menu-list__description {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding: 8px 10px 13px 10px;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-.menu-list__description h3 {
-  width: 100%;
-  font-family: roboto;
-  font-size: 1em;
-  font-weight: bold;
-  margin: 0;
-}
-
-.description {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.menu-list__description p {
-  width: 50%;
-  font-size: 0.9rem;
-  margin: 0;
-  border: none;
-}
-
-.price {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.check-box {
-  display: none;
-  background-color: #99e2d0;
-  height: 68px;
-  border-radius: 0 15px 15px 0;
-  right: 0;
-  top: 0;
-  animation: slideleft 0.8s ease-in-out forwards;
-}
-
-.parent:hover > .check-box {
-  display: block;
-  width: 20%;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.parent:hover > .check-box i {
-  font-size: 20px;
-  display: flex;
-}
-
-.parent:hover > .menu-list__description p {
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-@keyframes slideleft {
-  from {
-    transform: translateX(100%);
-    opacity: 0;
-  }
-  to {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-.check-box i {
-  display: none;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  font-size: 20px;
-  right: 0;
-  top: 0;
-  opacity: 1;
-  animation: rotate 800ms ease-in;
-}
-
-@keyframes rotate {
-  0% {
-    transform: rotate(-270deg);
-  }
-  100% {
-    transform: rotate(0deg);
-  }
-}
-.page-btn {
-  display: flex;
-  justify-content: center;
-  padding: 10px 0 60px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -626,31 +699,6 @@ footer p a {
     margin: 0 40px 40px;
     background: #353535;
     border-radius: 25px;
-  }
-
-  /*Page menu*/
-  .header-menu {
-    margin: 0 40px;
-  }
-
-  .header-menu a {
-    padding: 30px 40px 12px 20px;
-  }
-
-  .menu {
-    margin: 0 40px 20px;
-  }
-
-  .menu img {
-    border-radius: 25px 25px 0 0;
-  }
-
-  .menu--background {
-    border-radius: 0 0 25px 25px;
-  }
-
-  .parent:hover > .check-box {
-    width: 7%;
   }
 }
 
