--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -1,8 +1,8 @@
 /*Pages menu */
 .header-menu {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   & a {
     font-size: 1.5em;
     padding: 30px 17% 12px 20px;
@@ -13,176 +13,189 @@
   }
 }
 
-  .menu--background {
-    position: relative;
-    margin-top: -47px;
-    border-radius: 50px 42px 0 0;
-    background: #f6f6f6;
+.menu--background {
+  position: relative;
+  margin-top: -47px;
+  border-radius: 50px 42px 0 0;
+  background: #f6f6f6;
+}
+.menu img {
+  width: 100%;
+  height: 220px;
+  object-fit: cover;
+}
+.menu__description {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 33px;
+}
+.menu__description h1 {
+  font-size: 1.5rem;
+  font-family: shrikhand;
+  padding: 0 0 35px 19px;
+  margin: 0;
+}
+.heart--size {
+  height: 50%;
+  padding: 0 37px 0px 0;
+  font-size: 1.7rem;
+}
+.menu i {
+  width: 100%;
+  height: 100%;
+}
+.menu-list {
+  animation: slidedown 1s ease-in-out forwards;
+}
+@keyframes slidedown {
+  from {
+    transform: translateY(30px);
+    opacity: 0;
   }
-  .menu img {
-    width: 100%;
-    height: 220px;
-    object-fit: cover;
-  }
-  .menu__description {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 33px;
-  }
-  .menu__description h1 {
-    font-size: 1.5rem;
-    font-family: shrikhand;
-    padding: 0 0 35px 19px;
-    margin: 0;
-  }
-  .heart--size {
-    height: 50%;
-    padding: 0 37px 0px 0;
-    font-size: 1.7rem;
-  }
-  .menu i {
-    width: 100%;
-    height: 100%;
-  }
-  .menu-list {
-    animation: slidedown 1s ease-in-out forwards;
-  }
-  @keyframes slidedown {
-    from {
-      transform: translateY(30px);
-      opacity: 0;
-    }
-    to {
-      transform: translateY(0);
-      opacity: 1;
-    }
-  }
-  .menu-list h2 {
-    width: 13%;
-    font-family: roboto;
-    font-size: 1rem;
-    font-weight: normal;
-    padding-bottom: 8px;
-    margin: 0;
-    margin-left: 20px;
-    border-bottom: 2px solid #99e2d0;
-  }
-  .menu-list ul {
-    list-style-type: none;
-    padding: 14px 14px 25px;
-    margin: 0;
-  }
-  .menu-list ul li {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    height: 68px;
-    border-radius: 15px;
-    background: white;
-    margin-bottom: 15px;
-    overflow: hidden;
-    cursor: pointer;
-    box-shadow: 1px 1px 8px rgb(209, 208, 208);
-  }
-  
-  .menu-list__description {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding: 8px 10px 13px 10px;
-    white-space: nowrap;
-    overflow: hidden;
-  }
-  .menu-list__description h3 {
-    width: 100%;
-    font-family: roboto;
-    font-size: 1em;
-    font-weight: bold;
-    margin: 0;
-  }
-  .description {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  .menu-list__description p {
-    width: 50%;
-    font-size: 0.9rem;
-    margin: 0;
-    border: none;
-  }
-  .price {
-    display: flex;
-    justify-content: flex-end;
-  }
-  .check-box {
-    display: none;
-    background-color: #99e2d0;
-    height: 68px;
-    border-radius: 0 15px 15px 0;
-    right: 0;
-    top: 0;
-    animation: slideleft 0.8s ease-in-out forwards;
-  }
-  
-  .parent:hover > .check-box {
-    display: block;
-    width: 20%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-  .parent:hover > .check-box i {
-    font-size: 20px;
-    display: flex;
-  }
-  .parent:hover > .menu-list__description p {
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-  
-  @keyframes slideleft {
-    from {
-      transform: translateX(100%);
-      opacity: 0;
-    }
-    to {
-      transform: translateX(0);
-      opacity: 1;
-    }
-  }
-  
-  .check-box i {
-    display: none;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 20px;
-    right: 0;
-    top: 0;
+  to {
+    transform: translateY(0);
     opacity: 1;
-    animation: rotate 800ms ease-in;
   }
-  
-  @keyframes rotate {
-    0% {
-      transform: rotate(-270deg);
-    }
-    100% {
-      transform: rotate(0deg);
-    }
+}
+.menu-list h2 {
+  width: 13%;
+  font-family: roboto;
+  font-size: 1rem;
+  font-weight: normal;
+  padding-bottom: 8px;
+  margin: 0;
+  margin-left: 20px;
+  border-bottom: 2px solid #99e2d0;
+}
+.menu-list ul {
+  list-style-type: none;
+  padding: 14px 14px 25px;
+  margin: 0;
+}
+.menu-list ul li {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  height: 68px;
+  border-radius: 15px;
+  background: white;
+  margin-bottom: 15px;
+  overflow: hidden;
+  cursor: pointer;
+  box-shadow: 1px 1px 8px rgb(209, 208, 208);
+}
+
+.menu-list__description {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 8px 10px 13px 10px;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.menu-list__description h3 {
+  width: 100%;
+  font-family: roboto;
+  font-size: 1em;
+  font-weight: bold;
+  margin: 0;
+}
+.description {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.menu-list__description p {
+  width: 50%;
+  font-size: 0.9rem;
+  margin: 0;
+  border: none;
+}
+.price {
+  display: flex;
+  justify-content: flex-end;
+}
+.check-box {
+  display: none;
+  background-color: #99e2d0;
+  height: 68px;
+  border-radius: 0 15px 15px 0;
+  right: 0;
+  top: 0;
+  animation: slideleft 0.8s ease-in-out forwards;
+}
+
+.parent:hover > .check-box {
+  display: block;
+  width: 20%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.parent:hover > .check-box i {
+  font-size: 20px;
+  display: flex;
+}
+.parent:hover > .menu-list__description p {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+@keyframes slideleft {
+  from {
+    transform: translateX(100%);
+    opacity: 0;
   }
-  
-  .page-btn {
-    display: flex;
-    justify-content: center;
-    padding: 10px 0 60px;
+  to {
+    transform: translateX(0);
+    opacity: 1;
   }
-  @media only screen and (min-width: 768px) {
-      /*Page menu*/
+}
+
+.check-box i {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 20px;
+  right: 0;
+  top: 0;
+  opacity: 1;
+  animation: rotate 800ms ease-in;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(-270deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+.page-btn {
+  display: flex;
+  justify-content: center;
+  padding: 10px 0 60px;
+}
+.btn {
+  max-width: 220px;
+  width: 60%;
+  height: 50px;
+  border:none;
+  border-radius: 50px;
+  color: white;
+  font-size: 0.9rem;
+  font-family:roboto;
+  background: linear-gradient( #ff79da, #9356dc);
+  box-shadow: 1px 1px 8px rgb(209, 208, 208);
+}
+
+@media only screen and (min-width: 768px) {
+  /*Page menu*/
 
   .header-menu {
     margin: 0 40px;
@@ -202,4 +215,4 @@
   .parent:hover > .check-box {
     width: 7%;
   }
-  }
+}
